--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,5 +1,5 @@
- <div class="row">
-    <h1>Login</h1>
+ <div class="row col-md-6">
+    <h1>Signup</h1>
     <form method="post">
         <div class="form-group">
             <label for="email">Email address</label>
@@ -9,8 +9,8 @@
             <label for="password">Password</label>
             <input type="password" name="password" class="form-control" id="password" placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" class="btn btn-primary">SignUp</button>
         <div class="error-message" style="display: none;"></div>
     </form>
-    <a href="/signup">Signup instead</a>
+    <a href="/login">Login instead</a>
 </div>
